0.42    
        Handle distance searching with OpenGuides::Supersearch instead of
          find_within_distance action.

0.41    21 September 2004
        Added backlinks link to navbar.
        Added some anti-robot tags to certain pages.
        Fixed bug in install procedure - blank script_name should now get
          installed as index.cgi
        Added option of munging in custom lib paths on install.
        Added option of custom templates for footer, license warning
          on edit form, banner at top of page (see CUSTOMISATION file
          for details).
        Added new macro - used as eg @INDEX_LIST [[Locale Fulham]]
        Also fixed the RSS reader macro - use this as eg
          @RSS http://london.openguides.org/?action=rss;username=Kake
        More semantic markup for metadata display - see README.CSS

0.40    18 September 2004
        Recent Changes now shows changes in the past 24 hours, past week,
          past fortnight, and past 30 days.
        New preferences option to allow Recent Changes visit tracking.
        Preferences now has an option for when your prefs expire.
        Navbar added to diff and history pages.
        The "omit help links" preference now actually works.
        Set some pages to non-editable and non-deletable that should have been.
        Recent Changes RSS fixed so "wiki:importance" is set correctly.
        New "ignore_minor_edits" option for Recent Changes RSS.
        Added RSS feeds for contributors, locales and categories.

0.39    15 September 2004
        Split commit_node out into OpenGuides.pm in preparation for spam filter
        Added option of using Plucene for searching.  If you want to do this
          (and it is recommended over the default of Search::InvertedIndex)
          you will need to do two things:
            - either delete your old indexes (they're just files in the index
              directory) or use a different index directory