@@ -59,6 +59,7 @@ t/22_rss_modwiki.t
 t/31_supersearch.t
 t/32_supersearch_simple_metadata.t
 t/33_supersearch_advanced_search.t
+t/34_supersearch_paging.t
 t/35_supersearch_two_searches.t
 t/36_supersearch_order.t
 t/41_deletion.t
